--- a/ilosh_projectNew.htm
+++ b/ilosh_projectNew.htm
@@ -87,7 +87,7 @@
                                 <div class="tabBtn_block">
                                     <div class="tab_items">
                                         <button class="btn active" style="flex: 0 1 calc(50% - 1em);"><i class="i_edit"></i>標案資訊</button>
-                                        <button class="btn" style="flex: 0 1 calc(50% - 1em); display:none;"><i class="i_info"></i>決標與歷程</button>
+                                        <button class="btn" style="flex: 0 1 calc(50% - 1em);"><i class="i_info"></i>決標與歷程</button>
                                         <!--button class="btn"><i class="i_setting"></i>資訊</button-->
                                     </div>
                                 </div>
