--- a/index_list.html
+++ b/index_list.html
@@ -312,8 +312,13 @@
                         <td>AP功能：VDI - 1.場地空間管理:地點/電腦/分析區開放時間</td>
                         <td>
                             <ul>
-                                <li>1-1.場地/設備管理清單 <a href="ilosh_space_list.htm" target="_blank"></a></li>
-                                <li>1-2.新增/編修場地設備 <a href="ilosh_data_spaceedit.htm" target="_blank"></a></li>
+                                <li>版本一：
+                                    <ol>
+                                        <li>1-1.場地/設備管理清單 <a href="ilosh_space_list.htm" target="_blank"></a></li>
+                                        <li>1-2.新增/編修場地設備 <a href="ilosh_data_spaceedit.htm" target="_blank"></a></li>
+                                    </ol>
+                                </li>
+                                <li>版本二：</li>
                             </ul>
                         </td>
                     </tr>
@@ -338,20 +343,21 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td><font style="color:red;">(10/10新增)</font> 
+                        <td><font style="color:red;">(客製化新增)</font> 
                             AP功能：採購網 - 4.標案管理(編輯案件、變更歷程紀錄)</td>
                         <td>
                             <ul>
                                 <li>4-1.標案清單 <a href="ilosh_projectList.htm" target="_blank"></a></li>
                                 <li>4-2.標案新增 <a href="ilosh_projectNew.htm" target="_blank"></a></li>
-                                <li>4-3.標案新增/編修 <a href="ilosh_projectEdit.htm" target="_blank"></a></li>
-                                <li>彈出視窗(Lightbox)：歷程欄位記錄 <a href="fancybox_projecthistory.htm" target="_blank"></a></li>
+                                <li>4-3.標案新增/編修 <a href="ilosh_projectEdit.htm" target="_blank"></a><br>
+                                    彈出視窗(Lightbox)：歷程欄位記錄 <a href="fancybox_projecthistory.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td><font style="color:red;">(10/11新增)</font>AP功能：採購網 - 5.報表模組</td>
+                        <td><font style="color:red;">(客製化新增)</font> 
+                            AP功能：採購網 - 5.報表模組</td>
                         <td>
                             <ul>
                                 <li>5-1.標案統計 <a href="ilosh_projectStat.htm" target="_blank"></a></li>
@@ -360,13 +366,15 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>AP功能：研究網 - 6.成果批次上稿(匯入/附件批次上傳)</td>
+                        <td><font style="color:red;">(客製化新增)</font> 
+                            AP功能：研究網 - 6.成果批次上稿(匯入/附件批次上傳)</td>
                         <td>
                             <ul>
-                                <li>6-1.成果清單 <a href="#" target="_blank"></a></li>
+                                <li>6-1-1.成果清單(條列) <a href="ilosh_researchList.htm" target="_blank"></a></li>
+                                <li>6-1-2.成果單筆編輯 <a href="ilosh_researchNew.htm" target="_blank"></a><br>
+                                    彈出視窗(Lightbox)：歷程欄位記錄 <a href="fancybox_researchchapter.htm" target="_blank"></a></li>
                                 <li>6-2.匯入紀錄 <a href="ilosh_researchImportrecord.htm" target="_blank"></a></li>
-                                <li>6-3.匯入 <a href="ilosh_researchImport.htm" target="_blank"></a></li>
-                                <li>6-4.匯入上傳中(鎖定) <a href="ilosh_researchImport-uploading.htm" target="_blank"></a></li>
+                                <li>6-3.匯入 <a href="ilosh_researchImport.htm" target="_blank"></a>｜鎖定 <a href="ilosh_researchImport-uploading.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
@@ -375,11 +383,11 @@
                         <td>AP功能：研究網 - 7.報表模組</td>
                         <td>
                             <ul>
-                                <li>7-1.標案統計 <a href="#" target="_blank"></a></li>
+                                <li>7-1.成果統計 <a href="ilosh_researchStat.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
-                    <tr>
+                    <!--tr>
                         <td></td>
                         <td>系統功能擴充</td>
                         <td>
@@ -401,7 +409,7 @@
                                 </li>
                             </ul>
                         </td>
-                    </tr>
+                    </tr-->
                 </tbody>
             </table>
         </div>
