--- a/index_list.html
+++ b/index_list.html
@@ -380,7 +380,8 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>AP功能：研究網 - 7.報表模組</td>
+                        <td><font style="color:red;">(客製化新增)</font>
+                            AP功能：研究網 - 7.報表模組</td>
                         <td>
                             <ul>
                                 <li>7-1.成果統計 <a href="ilosh_researchStat.htm" target="_blank"></a></li>
