--- a/ilosh_projectStat.htm
+++ b/ilosh_projectStat.htm
@@ -207,7 +207,7 @@
                         </div>
                     </div>
                     <div class="flex-12">
-                        <div class="col"><p class="notice">目前條件 - 招標日期：2022/8/13~2022/10/13</p></div>
+                        <div class="col"><p class="notice">目前條件 - 招標日期：2022/1/1~2022/12/31</p></div>
                         
                     </div>
                     <div class="flex-3-3-3-3">
@@ -445,7 +445,7 @@
             // },
             colors: _Color,
             xAxis: [{
-                categories: ['一月', '二月', '三月', '四月', '五月', '六月', '七月', '八月', '九月', '十月', '十一月', '十二月'],
+                categories: ['2022/1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12'],
                 crosshair: true
             }],
             yAxis: [{ // Primary yAxis
