--- a/index_list.html
+++ b/index_list.html
@@ -307,7 +307,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <!--tr>
                         <td></td>
                         <td>AP功能：VDI - 1.場地空間管理:地點/電腦/分析區開放時間</td>
                         <td>
@@ -331,13 +331,14 @@
                                 <li>2-2.預約管理 <a href="#" target="_blank"></a></li>
                             </ul>
                         </td>
-                    </tr>
+                    </tr-->
                     <tr>
                         <td></td>
-                        <td>AP功能：VDI - 3.報表模組</td>
+                        <td><font style="color:red;">(客製化新增)</font>
+                            AP功能：VDI - 3.VDI報表模組</td>
                         <td>
                             <ul>
-                                <li></li>
+                                <li>3-1.標案統計 <a href="ilosh_vdiStat.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
