--- a/ilosh_researchStat.htm
+++ b/ilosh_researchStat.htm
@@ -269,7 +269,7 @@
                                                     <th>標題(名稱)</th>
                                                     <th>單元</th>
                                                     <th>研究單位</th>
-                                                    <th class="text-left">狀態</th>
+                                                    <th class="text-left">下載數</th>
                                                     <th>建立日期</th>
                                                 </tr>
                                             </thead>
@@ -280,7 +280,16 @@
                                                     <td>職業災害勞工使用自費醫療材料情形評估研究</td>
                                                     <td>各年度研究報告</td>
                                                     <td>職業安全研究組</td>
-                                                    <td>公開(上架)</td>
+                                                    <td>101</td>
+                                                    <td><time>2022/07/27</time></td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="num">2</td>
+                                                    <td>ILOSH110-A301</td>
+                                                    <td>職業災害勞工使用自費醫療材料情形評估研究222</td>
+                                                    <td>各年度研究報告</td>
+                                                    <td>職業安全研究組</td>
+                                                    <td>88</td>
                                                     <td><time>2022/07/27</time></td>
                                                 </tr>
                                            </tbody>
