--- a/index_list.html
+++ b/index_list.html
@@ -338,7 +338,7 @@
                             AP功能：VDI - 3.VDI報表模組</td>
                         <td>
                             <ul>
-                                <li>3-1.標案統計 <a href="ilosh_vdiStat.htm" target="_blank"></a></li>
+                                <li>3-1.VDI統計 <a href="ilosh_vdiStat.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
