--- a/ilosh_researchStat.htm
+++ b/ilosh_researchStat.htm
@@ -45,66 +45,19 @@
                     </div>
                     <!-- flex-12 搜尋 -->
                     <div class="flex-12">
-                        <div class="adv_search">
+                        <div class="adv_search" id="open" style="display:block;">
                             <div class="col">
                                 <div class="content_block">
                                     <div class="_head">
-                                        <h3>查詢</h3>
+                                        <h3>統計報表設定</h3>
                                     </div>
                                     <div class="_content">
+                                        <h4>查詢條件設定</h4>
                                         <div class="flex-form flex-6-6">
-                                            <div class="form_grp">
-                                                <div class="labelEffect">
-                                                        <select id="" name="">
-                                                            <option value="" selected disabled="disabled"></option>
-                                                            <option value="1">各年度研究報告</option>
-                                                            <option value="2">簡訊</option>
-                                                            <option value="3">研究季刊</option>
-                                                            <option value="4">技術叢書</option>
-                                                            <option value="5">重要績效輯(其他出版品)</option>
-                                                            <option value="6">專利技術</option>
-                                                        </select>
-                                                        <label>單元</label>
-                                                </div>
-                                            </div>
-                                            <div class="form_grp form_inline" style="margin-top:10px;">
-                                                <div class="labelEffect">
-                                                    <div class="form_title">統計結果<abbr>*</abbr></div>
-                                                    <div class="form_content">
-                                                        <div class="check_grp form_inline">
-                                                            <label><input name="111" type="radio" value="" checked style="border-radius: 1em;width: 1.25em;height: 1.25em;"><span>單元</span></label>
-                                                            <label><input name="111" type="radio" value="" style="border-radius: 1em;width: 1.25em;height: 1.25em;"><span>資料</span></label>
-                                                        </div>
-                                                        <!--div class="help">說明文字</-->
-                                                    </div>
-                                                </div>
-                                                <div class="labelEffect">
-                                                    <div class="form_title">報表類型<abbr>*</abbr></div>
-                                                    <div class="form_content">
-                                                        <div class="check_grp form_inline">
-                                                            <label><input name="222" type="radio" value="" style="border-radius: 1em;width: 1.25em;height: 1.25em;"><span>瀏覽</span></label>
-                                                            <label><input name="222" type="radio" value="" checked style="border-radius: 1em;width: 1.25em;height: 1.25em;"><span>下載</span></label>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
                                             <div class="form_grp">
                                                 <div class="labelEffect">
                                                     <input name="search_name" id="search_name" type="text" value="">
                                                     <label>標題(名稱)</label>
-                                                </div>
-                                            </div>
-                                            <div class="form_grp" style="margin-top:10px;">
-                                                <div class="labelEffect">
-                                                    <div class="form_title">圖表單位<abbr>*</abbr></div>
-                                                    <div class="form_content">
-                                                        <div class="check_grp form_inline">
-                                                            <label><input name="333" type="radio" value="" style="border-radius: 1em;width: 1.25em;height: 1.25em;"><span>年</span></label>
-                                                            <label><input name="333" type="radio" value="" checked style="border-radius: 1em;width: 1.25em;height: 1.25em;"><span>月</span></label>
-                                                            <label><input name="333" type="radio" value="" style="border-radius: 1em;width: 1.25em;height: 1.25em;"><span>天</span></label>
-                                                        </div>
-                                                        <!--div class="help">說明文字</-->
-                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="form_grp datepick">
@@ -152,6 +105,75 @@
                                                         </select>
                                                         <label>年度</label>
                                                     </div>
+                                            </div>
+                                            <div class="form_grp datepick">
+                                                <div class="startDate">
+                                                    <div class="labelEffect">
+                                                        <!--處理 Animated Labels for date/datetime-local 會卡在一起的效果-->
+                                                        <input name="" type="text" value="" onfocus="(this.type='datetime-local')" onblur="if(!this.value) this.type='text'">
+                                                        <!--input name="" type="calendar" value="" class="calendar">
+                                                        <button class="btn"><i class="i_calendar"></i></button-->
+                                                        <label>統計日期(起)</label>
+                                                    </div>
+                                                    <!-- <div class="help">說明文字</div> -->
+                                                </div>
+                                                <div class="endDate">
+                                                    <div class="labelEffect">
+                                                        <input name="" type="text" value="" onfocus="(this.type='datetime-local')" onblur="if(!this.value) this.type='text'">
+                                                        <!--input name="" type="calendar" value="" class="calendar">
+                                                        <button class="btn"><i class="i_calendar"></i></button-->
+                                                        <label>統計日期(迄)</label>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <h4>圖表設定</h4>
+                                        <div class="flex-form flex-6-6">
+                                            <div class="form_grp form_inline" style="margin-top:10px;">
+                                                <div class="labelEffect">
+                                                    <div class="form_title">圖表單位<abbr>*</abbr></div>
+                                                    <div class="form_content">
+                                                        <div class="check_grp form_inline">
+                                                            <label><input name="333" type="radio" value="" style="border-radius: 1em;width: 1.25em;height: 1.25em;"><span>年</span></label>
+                                                            <label><input name="333" type="radio" value="" checked style="border-radius: 1em;width: 1.25em;height: 1.25em;"><span>月</span></label>
+                                                            <label><input name="333" type="radio" value="" style="border-radius: 1em;width: 1.25em;height: 1.25em;"><span>天</span></label>
+                                                        </div>
+                                                        <!--div class="help">說明文字</-->
+                                                    </div>
+                                                </div>
+                                                <div class="labelEffect">
+                                                    <div class="form_title">統計單位<abbr>*</abbr></div>
+                                                    <div class="form_content">
+                                                        <div class="check_grp form_inline">
+                                                            <label><input name="222" type="radio" value="" style="border-radius: 1em;width: 1.25em;height: 1.25em;"><span>瀏覽</span></label>
+                                                            <label><input name="222" type="radio" value="" checked style="border-radius: 1em;width: 1.25em;height: 1.25em;"><span>下載</span></label>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <h4>匯出設定</h4>
+                                        <div class="flex-form flex-6-6">
+                                            <div class="form_grp" style="">
+                                                <div class="labelEffect">
+                                                    <!--div class="form_title">統計結果<abbr>*</abbr></div-->
+                                                    <div class="form_content">
+                                                        <div class="check_grp">
+                                                           <label><input name="111" type="radio" value="" style="border-radius: 1em;width: 1.25em;height: 1.25em;"><span>單元</span></label>
+                                                           <label><input name="111" type="radio" value="" checked style="border-radius: 1em;width: 1.25em;height: 1.25em;"><span>資料</span></label>
+                                                                    <div class="check_grp form_inline">
+                                                                        <label><input name="111" type="checkbox" value="" checked><span>全部</span></label>
+                                                                        <label><input name="111" type="checkbox" value=""><span>各年度研究報告</span></label>
+                                                                        <label><input name="111" type="checkbox" value="" checked><span>簡訊</span></label>
+                                                                        <label><input name="111" type="checkbox" value=""><span>研究季刊</span></label>
+                                                                        <label><input name="111" type="checkbox" value=""><span>技術叢書</span></label>
+                                                                        <label><input name="111" type="checkbox" value=""><span>研究年報</span></label>
+                                                                        <label><input name="111" type="checkbox" value="" checked><span>其它出版品</span></label>
+                                                                        <label><input name="111" type="checkbox" value="" checked><span>專利技術</span></label>
+                                                                    </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                         
@@ -232,7 +254,7 @@
                         <div class="col ">
                             <div class="content_block">
                                 <div class="_head">
-                                    <h3>下載次數</h3>
+                                    <h3>統計次數</h3>
                                 </div>
                                 <div class="_content">
                                     <!-- 長條圖 -->
@@ -262,6 +284,7 @@
                                     <!-- 表格樣式 -->
                                     <div class="table_wrapper">
                                         <table class="table_hover">
+                                            <caption>研究成果區間統計by資料</caption>
                                             <thead>
                                                 <tr>
                                                     <th>序號</th>
@@ -269,8 +292,9 @@
                                                     <th>標題(名稱)</th>
                                                     <th>單元</th>
                                                     <th>研究單位</th>
-                                                    <th class="text-left">下載數</th>
                                                     <th>建立日期</th>
+                                                    <th class="text-left">下載數</th>
+                                                    <th class="text-left">瀏覽數</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -280,8 +304,9 @@
                                                     <td>職業災害勞工使用自費醫療材料情形評估研究</td>
                                                     <td>各年度研究報告</td>
                                                     <td>職業安全研究組</td>
-                                                    <td>101</td>
                                                     <td><time>2022/07/27</time></td>
+                                                    <td>101</td>
+                                                    <td>222</td>
                                                 </tr>
                                                 <tr>
                                                     <td class="num">2</td>
@@ -289,8 +314,37 @@
                                                     <td>職業災害勞工使用自費醫療材料情形評估研究222</td>
                                                     <td>各年度研究報告</td>
                                                     <td>職業安全研究組</td>
-                                                    <td>88</td>
                                                     <td><time>2022/07/27</time></td>
+                                                    <td>88</td>
+                                                    <td>58</td>
+                                                </tr>
+                                           </tbody>
+                                        </table>
+                                    </div>
+
+                                    <div class="table_wrapper">
+                                        <table class="table_hover">
+                                            <caption>研究成果區間統計by資料</caption>
+                                            <thead>
+                                                <tr>
+                                                    <th>序號</th>
+                                                    <th>單元</th>
+                                                    <th class="text-left">下載數</th>
+                                                    <th class="text-left">瀏覽數</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td class="num">1</td>
+                                                    <td>各年度研究報告</td>
+                                                    <td>1101</td>
+                                                    <td>1222</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="num">2</td>
+                                                    <td>簡訊</td>
+                                                    <td>1088</td>
+                                                    <td>1058</td>
                                                 </tr>
                                            </tbody>
                                         </table>
@@ -331,7 +385,7 @@
                 zoomType: 'xy'
             },
             title: {
-                text: '研究成果下載統計資訊'
+                text: '研究成果統計資訊'
             },
             // subtitle: {
             //     text: 'Source: 勞安所科研採購網'
@@ -383,7 +437,7 @@
                     'rgba(255,255,255,0.25)'
             },
             series: [{
-                name: '研究報告',
+                name: '各年度研究報告',
                 type: 'column',
                 yAxis: 1,
                 data: [49.0, 71.0, 106.0, 129.0, 144.0, 126.0, 35.0, 48.0, 16.0, 19.0, 95.0, 54.0],
@@ -399,7 +453,7 @@
                     valueSuffix: ''
                 }
             }, {
-                name: '季刊',
+                name: '研究季刊',
                 type: 'column',
                 yAxis: 1,
                 data: [3.0, 16.0, 8.0, 9.0, 7.0, 19.0, 5.0, 6.0, 13.0, 8.0, 3.0, 9.0],
@@ -415,10 +469,26 @@
                     valueSuffix: ''
                 }
             }, {
+                name: '研究年報',
+                type: 'column',
+                yAxis: 1,
+                data: [7.0, 6.0, 9.0, 4.0, 8.0, 9.0, 22.0, 1.0, 3.0, 18.0, 3.0, 2.0],
+                tooltip: {
+                    valueSuffix: ''
+                }
+            }, {
                 name: '其他出版品',
                 type: 'column',
                 yAxis: 1,
                 data: [17.0, 26.0, 89.0, 94.0, 78.0, 91.0, 25.0, 26.0, 13.0, 18.0, 53.0, 9.0],
+                tooltip: {
+                    valueSuffix: ''
+                }
+            }, {
+                name: '專利技術',
+                type: 'column',
+                yAxis: 1,
+                data: [7.0, 6.0, 9.0, 4.0, 8.0, 9.0, 22.0, 1.0, 3.0, 18.0, 3.0, 2.0],
                 tooltip: {
                     valueSuffix: ''
                 }
