--- a/ilosh_projectStat.htm
+++ b/ilosh_projectStat.htm
@@ -45,7 +45,7 @@
                     </div>
                     <!-- flex-12 搜尋 -->
                     <div class="flex-12">
-                        <div class="adv_search">
+                        <div class="adv_search" id="open" style="display:block;">
                             <div class="col">
                                 <div class="content_block">
                                     <div class="_head">
@@ -219,7 +219,7 @@
                                 <div class="_content">
                                     <div class="mp_widget">
                                         <div class="widget_now_counter">
-                                            <div class="counter "data-count="1537"></div>
+                                            <div class="counter "data-count="1537">1537</div>
                                         </div>
                                         <!--div class="help">時間以...為計算準</div-->
                                     </div>
@@ -234,7 +234,7 @@
                                 <div class="_content">
                                     <div class="mp_widget">
                                         <div class="widget_now_pageview">
-                                            <div class="counter "data-count="654"></div>
+                                            <div class="counter "data-count="654">654</div>
                                         </div>
                                         <!--div class="help">時間以...為計算準</div-->
                                     </div>
@@ -249,7 +249,7 @@
                                 <div class="_content">
                                     <div class="mp_widget ">
                                         <div class="widget_now_user">
-                                            <div class="counter "data-count="376"></div>
+                                            <div class="counter "data-count="376">376</div>
                                         </div>
                                     </div>
                                 </div>
