--- a/ilosh_researchStat.htm
+++ b/ilosh_researchStat.htm
@@ -154,24 +154,25 @@
                                         </div>
                                         <h4>匯出設定</h4>
                                         <div class="flex-form flex-6-6">
-                                            <div class="form_grp" style="">
+                                            <div class="form_grp">
                                                 <div class="labelEffect">
                                                     <!--div class="form_title">統計結果<abbr>*</abbr></div-->
                                                     <div class="form_content">
                                                         <div class="check_grp">
                                                            <label><input name="111" type="radio" value="" style="border-radius: 1em;width: 1.25em;height: 1.25em;"><span>單元</span></label>
                                                            <label><input name="111" type="radio" value="" checked style="border-radius: 1em;width: 1.25em;height: 1.25em;"><span>資料</span></label>
-                                                                    <div class="check_grp form_inline">
-                                                                        <label><input name="111" type="checkbox" value="" checked><span>全部</span></label>
-                                                                        <label><input name="111" type="checkbox" value=""><span>各年度研究報告</span></label>
-                                                                        <label><input name="111" type="checkbox" value="" checked><span>簡訊</span></label>
-                                                                        <label><input name="111" type="checkbox" value=""><span>研究季刊</span></label>
-                                                                        <label><input name="111" type="checkbox" value=""><span>技術叢書</span></label>
-                                                                        <label><input name="111" type="checkbox" value=""><span>研究年報</span></label>
-                                                                        <label><input name="111" type="checkbox" value="" checked><span>其它出版品</span></label>
-                                                                        <label><input name="111" type="checkbox" value="" checked><span>專利技術</span></label>
-                                                                    </div>
+                                                                <div class="check_grp form_inline">
+                                                                    <label><input name="111" type="checkbox" value="" checked><span>全部</span></label>
+                                                                    <label><input name="111" type="checkbox" value=""><span>各年度研究報告</span></label>
+                                                                    <label><input name="111" type="checkbox" value="" checked><span>簡訊</span></label>
+                                                                    <label><input name="111" type="checkbox" value=""><span>研究季刊</span></label>
+                                                                    <label><input name="111" type="checkbox" value=""><span>技術叢書</span></label>
+                                                                    <label><input name="111" type="checkbox" value=""><span>研究年報</span></label>
+                                                                    <label><input name="111" type="checkbox" value="" checked><span>其它出版品</span></label>
+                                                                    <label><input name="111" type="checkbox" value="" checked><span>專利技術</span></label>
+                                                                </div>
                                                         </div>
+                                                        <div class="help">選擇匯出資料模式，可再勾選單元篩選條件。若勾選多個單元，則會產生多組報表結果</div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -199,7 +200,7 @@
                                 <div class="_content">
                                     <div class="mp_widget">
                                         <div class="widget_now_counter">
-                                            <div class="counter "data-count="1537"></div>
+                                            <div class="counter "data-count="1537">1537</div>
                                         </div>
                                         <!--div class="help">時間以...為計算準</div-->
                                     </div>
@@ -214,7 +215,7 @@
                                 <div class="_content">
                                     <div class="mp_widget">
                                         <div class="widget_now_pageview">
-                                            <div class="counter "data-count="34"></div>
+                                            <div class="counter "data-count="34">34</div>
                                         </div>
                                         <!--div class="help">時間以...為計算準</div-->
                                     </div>
@@ -229,7 +230,7 @@
                                 <div class="_content">
                                     <div class="mp_widget ">
                                         <div class="widget_now_user">
-                                            <div class="counter "data-count="376"></div>
+                                            <div class="counter "data-count="376">376</div>
                                         </div>
                                     </div>
                                 </div>
@@ -243,7 +244,7 @@
                                 <div class="_content">
                                     <div class="mp_widget">
                                         <div class="widget_new_data">
-                                            <div class="counter "data-count="1220"></div>
+                                            <div class="counter "data-count="1220">1220</div>
                                         </div>
                                     </div>
                                 </div>
