--- a/fancybox_seatedit.htm
+++ b/fancybox_seatedit.htm
@@ -27,12 +27,12 @@
                 <div class="content_block">
                     <div class="lightbox_title">設定座位設備資訊</div>
                     <div class="_head" style="margin-top: 55px;">
-                        <h3>座位資料設定</h3>
+                        <h3>座位資料設定：A1</h3>
                         <div class="flex-form">
                             <div class="form_grp data-title">
                                 <div class="labelEffect">
                                     <input name="" type="text" value="A1">
-                                    <label>請輸入座位名稱<abbr>*</abbr></label>
+                                    <label>請輸入座位自定名稱<abbr>*</abbr></label>
                                 </div>
                             </div>
                         </div>
@@ -62,7 +62,7 @@
                                                 <input name="" type="text" value="" onfocus="(this.type='datetime-local')" onblur="if(!this.value) this.type='text'">
                                                 <!--input name="" type="calendar" value="" class="calendar">
                                                 <button class="btn"><i class="i_calendar"></i></button-->
-                                                <label>提用結束日期</label>
+                                                <label>停用結束日期</label>
                                             </div>
                                         </div>
                                     </div>
@@ -70,12 +70,12 @@
                             </div>
                         </div>
                         <hr style="margin-top:20px;">
-                        <div class="form_grp">
+                        <!--div class="form_grp">
                             <div class="labelEffect">
                                 <input name="" type="text" value="" placeholder="請選入電腦軟體資訊" class="used">
                                 <button class="btn btn-primary btn-text">選擇</button>
                             </div>
-                        </div>
+                        </div-->
                         <div class="form_grp">
                             <div class="labelEffect">
                                 <textarea></textarea>
