--- a/index_list.html
+++ b/index_list.html
@@ -307,18 +307,13 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <!--tr>
+                    <tr>
                         <td></td>
                         <td>AP功能：VDI - 1.場地空間管理:地點/電腦/分析區開放時間</td>
                         <td>
                             <ul>
-                                <li>版本一：
-                                    <ol>
-                                        <li>1-1.場地/設備管理清單 <a href="ilosh_space_list.htm" target="_blank"></a></li>
-                                        <li>1-2.新增/編修場地設備 <a href="ilosh_data_spaceedit.htm" target="_blank"></a></li>
-                                    </ol>
-                                </li>
-                                <li>版本二：</li>
+                                <li>1-1.場地/設備管理清單 <a href="ilosh_space_list.htm" target="_blank"></a></li>
+                                <li>1-2.新增/編修場地設備 <a href="ilosh_spaceedit.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
@@ -331,7 +326,7 @@
                                 <li>2-2.預約管理 <a href="#" target="_blank"></a></li>
                             </ul>
                         </td>
-                    </tr-->
+                    </tr>
                     <tr>
                         <td></td>
                         <td><font style="color:red;">(客製化新增)</font>
