--- a/fancybox_seatedit.htm
+++ b/fancybox_seatedit.htm
@@ -29,7 +29,7 @@
                     <div class="_head" style="margin-top: 55px;">
                         <h3>座位資料設定：A1</h3>
                         <div class="flex-form">
-                            <div class="form_grp data-title">
+                            <div class="form_grp" style="margin-top:20px;">
                                 <div class="labelEffect">
                                     <input name="" type="text" value="A1">
                                     <label>請輸入座位自定名稱<abbr>*</abbr></label>
@@ -39,7 +39,7 @@
 
                     </div>
                     <div class="_content">
-                        <div class="form_grp">
+                        <div class="form_grp" style="margin-top:20px;">
                             <div class="form_title" style="font-size:.813em;color:#00646d;margin-right:10px;">是否啟用</div>
                             <div class="form_content">
                                 <div class="radio_grp form_inline">
@@ -52,31 +52,25 @@
                                                 <!--處理 Animated Labels for date/datetime-local 會卡在一起的效果-->
                                                 <input name="" type="text" value="" onfocus="(this.type='datetime-local')" onblur="if(!this.value) this.type='text'">
                                                 <!--input name="" type="calendar" value="" class="calendar">
-                                                <button class="btn"><i class="i_calendar"></i></button-->
-                                                <label>停用開始日期</label>
+                                                <button class="btn"><i class="i_calendar"></i></button>
+                                                <label>停用開始日期</label-->
                                             </div>
                                             <!-- <div class="help">說明文字</div> -->
-                                        </div>
+                                        </div> ~ 
                                         <div class="endDate">
                                             <div class="labelEffect">
                                                 <input name="" type="text" value="" onfocus="(this.type='datetime-local')" onblur="if(!this.value) this.type='text'">
                                                 <!--input name="" type="calendar" value="" class="calendar">
-                                                <button class="btn"><i class="i_calendar"></i></button-->
-                                                <label>停用結束日期</label>
+                                                <button class="btn"><i class="i_calendar"></i></button>
+                                                <label>停用結束日期</label-->
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <hr style="margin-top:20px;">
-                        <!--div class="form_grp">
-                            <div class="labelEffect">
-                                <input name="" type="text" value="" placeholder="請選入電腦軟體資訊" class="used">
-                                <button class="btn btn-primary btn-text">選擇</button>
-                            </div>
-                        </div-->
-                        <div class="form_grp">
+                        <hr>
+                        <div class="form_grp" style="margin-top:30px;">
                             <div class="labelEffect">
                                 <textarea></textarea>
                                 <label>座位備註</label>
