--- a/index_list.html
+++ b/index_list.html
@@ -313,7 +313,7 @@
                         <td>
                             <ul>
                                 <li>1-1.場地/設備管理清單 <a href="ilosh_space_list.htm" target="_blank"></a></li>
-                                <li>1-2.新增/編修場地設備 <a href="ilosh_spaceedit.htm" target="_blank"></a></li>
+                                <li><font style="color:red;">(調整)</font> 1-2.新增編修場地/座位/開放時間設定 <a href="ilosh_spaceedit.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
