--- a/ilosh_space_list.htm
+++ b/ilosh_space_list.htm
@@ -67,7 +67,7 @@
                                         </form>
                                     </div>
                                     <div class="quick_btn">
-                                        <button class="btn btn-orange" onclick="window.location.href='#';"><i class="i_add"></i>新增</button>
+                                        <button class="btn btn-orange" onclick="window.location.href='ilosh_spaceedit.htm';"><i class="i_add"></i>新增</button>
                                     </div>
                                 </div>
                                 <div class="_content">
@@ -91,12 +91,12 @@
                                             <tbody>
                                                 <tr>
                                                     <td class="num">1</td>
-                                                    <td><a href="#">勞動部勞動及職業安全衛生研究所-實驗大樓一樓分析區</a></td>
+                                                    <td><a href="ilosh_spaceedit.htm">勞動部勞動及職業安全衛生研究所-實驗大樓一樓分析區</a></td>
                                                     <td><span class="green">公開(上架)</span></td>
                                                     <td><time>2022/07/27</time></td>
                                                     <td>
                                                         <div class="btn_grp">
-                                                            <a href="#" class="btn"><i class="i_edit"></i>編輯</a>
+                                                            <a href="ilosh_spaceedit.htm" class="btn"><i class="i_edit"></i>編輯</a>
                                                         </div>
                                                     </td>
                                                 </tr>
