--- a/index_list.html
+++ b/index_list.html
@@ -322,7 +322,7 @@
                         <td>AP功能：VDI - 2.預約名單 / 會員帳號 / 虛擬主機 / 申請案件管理</td>
                         <td>
                             <ul>
-                                <li>2-1.預約清單 <a href="ilosh_reservationList.htm" target="_blank"></a></li>
+                                <li><font style="color:red;">(調整欄位、增加友善列印)</font> 2-1.預約清單 <a href="ilosh_reservationList.htm" target="_blank"></a></li>
                                 <li>2-2.預約管理 <a href="#" target="_blank"></a></li>
                             </ul>
                         </td>
